--- a/references.bib
+++ b/references.bib
@@ -120,3 +120,10 @@
   journal={Volume 44, Issue 8-910.1002},
   year={2025}
 }
+
+@article{seer,
+  title={SEER Program Coding and Staging Manual 2018},
+  author={Adamo M., Dickie L., & Ruhl, J.},
+  journal={National Cancer Institute.},
+  year={2018}
+}
